--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- navbar section -->
+    <div class="header">
+        <div class="navbar__content">
+            <div class="navbar__left">
+                <img src="assets/logo.svg" alt="">
+            </div>
+            <div class="navbar__center">
+                <ul>
+                    <li><a href="">Discover</a></li>
+                    <li><a href="">Trips</a></li>
+                    <li><a href="">Review</a></li>
+                    <li><a href="">Flights</a></li>
+                </ul>
+            </div>
+            <div class="navbar__right">
+               <div class="navbar__right--value">
+                <img src="assets/world.svg" alt="">
+                <a href="">Inr</a>
+               </div>
+               <div class="navbar__right--button">
+                <a href="">Sign In</a>
+               </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
