--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trip Adviser Clone</title>
     <!-- style sheet -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <!-- navbar section -->
     <div class="header">
@@ -23,16 +28,80 @@
                 </ul>
             </div>
             <div class="navbar__right">
-               <div class="navbar__right--value">
-                <img src="assets/world.svg" alt="">
-                <a href="">Inr</a>
-               </div>
-               <div class="navbar__right--button">
-                <a href="">Sign In</a>
-               </div>
+                <div class="navbar__right--value">
+                    <img src="assets/world.svg" alt="">
+                    <a href="">Inr</a>
+                </div>
+                <div class="navbar__right--button">
+                    <a href="">Sign In</a>
+                </div>
             </div>
         </div>
     </div>
-    
+
+    <!-- search section -->
+
+    <div class="search__section">
+        <div class="search__head">
+            <h1>Where to?</h1>
+        </div>
+        <div class="search__category">
+            <ul>
+                <li class="active"><a href="">Search All</a></li>
+                <li><a href="">Hotels</a></li>
+                <li><a href="">Things To</a></li>
+                <li><a href="">Resturants</a></li>
+                <li><a href="">Holiday Homes</a></li>
+            </ul>
+
+        </div>
+        <div class="search__bar">
+            <div class="search__bar--items">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="Please to go, things to do, hotels...">
+                <a href="">Search</a>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- banner section -->
+
+    <div class="banner__section">
+        <div class="banner__content">
+            <h1>Build a trip in minutes</h1>
+            <p>Get a personalised itinerary just for you, guided by traveller tips and reviews.</p>
+            <div class="b__btn">
+                <a href=""><i class="fa-solid fa-location-dot"></i>Start a trip with AI</a>
+
+            </div>
+        </div>
+        <div class="banner__image">
+            <img src="assets/b1.png" alt="">
+        </div>
+    </div>
+
+
+    <!-- ad section -->
+    <div class="ad__section">
+        <div class="ad__items">
+            <div class="img--1">
+                <div class="ad__images">
+                    <div class="ad-img">
+                        <img src="assets/caption.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+          
+            <div class="ad__items--content">
+                <h2>A family-friendly guide to Rome</h2>
+                <p>Is Rome good for families? Here's our guide to exploring Rome with kids, including the best family hotels to stay, kid-friendly restaurants, and the top things to do.</p>
+            </div>
+            <div class="ad__btn">
+                <a href="">Explore Now</a>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
