home screen design

--- a/index.html
+++ b/index.html
@@ -92,14 +92,218 @@
                     </div>
                 </div>
             </div>
-          
+
             <div class="ad__items--content">
                 <h2>A family-friendly guide to Rome</h2>
-                <p>Is Rome good for families? Here's our guide to exploring Rome with kids, including the best family hotels to stay, kid-friendly restaurants, and the top things to do.</p>
+                <p>Is Rome good for families? Here's our guide to exploring Rome with kids, including the best family
+                    hotels to stay, kid-friendly restaurants, and the top things to do.</p>
             </div>
             <div class="ad__btn">
-                <a href="">Explore Now</a>
+                <a href="" class="expo__btn">Explore Now</a>
             </div>
+        </div>
+    </div>
+
+    <!--trip carousel section-->
+
+    <div class="carousel__section">
+        <div class="carousel__title">
+            <p>Take a trip to a traveller fave</p>
+            <span>The best tours, activities and tickets</span>
+        </div>
+        <div class="carousel__item--start">
+            <div class="carousel__inner">
+                <div class="item__1">
+                    <img src="assets/1.png" alt="">
+                    <h2>Top Destinations</h2>
+                </div>
+                <div class="item__1">
+                    <img src="assets/2.png" alt="">
+                    <h2>
+                        Trending Destinations</h2>
+                </div>
+                <div class="item__1">
+                    <img src="assets/3.png" alt="">
+                    <h2>
+                        Food Destinations</h2>
+                </div>
+                <div class="item__1">
+                    <img src="assets/4.png" alt="">
+                    <h2>
+                        Nature Destinations</h2>
+                </div>
+
+            </div>
+            <div class="carousel__btn">
+                <a href="" class="left__btn"><i class="fa-solid fa-arrow-left"></i></a>
+                <a href="" class="right__btn"><i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- experiense section -->
+    <div class="carousel__section">
+        <div class="carousel__title">
+            <p>Top experiences on Tripadvisor</p>
+            <span>The best tours, activities and tickets</span>
+        </div>
+        <div class="carousel__item--start">
+            <div class="carousel__inner">
+                <div class="item__1">
+                    <img src="assets/6.png" alt="">
+
+                    <div class="carousel__deatails">
+                        <a href="">BEST SELLER</a>
+                        <p>Ubud Tour - Best of Ubud - All Inclusive</p>
+                        <div class="star__section">
+                            <div class="star__items">
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                            </div>
+                            <span>8,754</span>
+                        </div>
+                        <span>from ₹7,651 per adult</p>
+                    </div>
+                </div>
+                <div class="item__1">
+                    <img src="assets/7.png" alt="">
+                    <div class="carousel__deatails">
+                        <a href="">LIKELY TO SELL OUT</a>
+                        <p>Ubud Tour - Best of Ubud - All Inclusive</p>
+                        <div class="star__section">
+                            <div class="star__items">
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                            </div>
+                            <span>8,754</span>
+                        </div>
+                        <span>from ₹7,651 per adult</p>
+                    </div>
+                </div>
+                <div class="item__1">
+                    <img src="assets/8.png" alt="">
+                    <div class="carousel__deatails">
+
+                        <p>Ubud Tour - Best of Ubud - All Inclusive</p>
+                        <div class="star__section">
+                            <div class="star__items">
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                            </div>
+                            <span>8,754</span>
+                        </div>
+                        <span>from ₹7,651 per adult</p>
+                    </div>
+                </div>
+                <div class="item__1">
+                    <img src="assets/9.png" alt="">
+                    <div class="carousel__deatails">
+
+                        <p>Ubud Tour - Best of Ubud - All Inclusive</p>
+                        <div class="star__section">
+                            <div class="star__items">
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                                <div class="span"></div>
+                            </div>
+                            <span>8,754</span>
+                        </div>
+                        <span>from ₹7,651 per adult</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="carousel__btn">
+                <a href="" class="left__btn"><i class="fa-solid fa-arrow-left"></i></a>
+                <a href="" class="right__btn"><i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+
+        </div>
+
+    </div>
+
+    <!--trip carousel section-->
+
+    <div class="carousel__section mt-50">
+        <div class="carousel__title">
+            <p>TVibrant Asian cities</p>
+            <span>From rich cultural history to psychedelic streets
+
+            </span>
+        </div>
+        <div class="carousel__item--start">
+            <div class="carousel__inner">
+                <div class="item__1">
+                    <img src="assets/1.png" alt="">
+                    <h2>Top Destinations</h2>
+                </div>
+                <div class="item__1">
+                    <img src="assets/2.png" alt="">
+                    <h2>
+                        Trending Destinations</h2>
+                </div>
+                <div class="item__1">
+                    <img src="assets/3.png" alt="">
+                    <h2>
+                        Food Destinations</h2>
+                </div>
+                <div class="item__1">
+                    <img src="assets/4.png" alt="">
+                    <h2>
+                        Nature Destinations</h2>
+                </div>
+
+            </div>
+            <div class="carousel__btn">
+                <a href="" class="left__btn"><i class="fa-solid fa-arrow-left"></i></a>
+                <a href="" class="right__btn"><i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- video section -->
+    <div class="video__section">
+        <div class="video">
+            <iframe autoplay width="100%" height="315" src="https://www.youtube.com/embed/rcS1AsvZino?si=ZL69zicDym2TFbdr" title="YouTube video player" frameborder="0" allow=" autoplay; muted;  picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer__content">
+            <div class="footer__item">
+                <p>About Tripadvisor</p>
+                <ul>
+                    <li>About Us
+                       </li>
+                    <li> Press
+                       </li>
+                    <li> Resources and Policies
+                       </li>
+                    <li> Careers
+                      </li>
+                    <li>  Trust & Safety
+                       </li>
+                       <li> Contact us</li>
+                </ul>
+            </div>
+            <div class="footer__item"></div>
+            <div class="footer__item"></div>
+            <div class="footer__item"></div>
         </div>
     </div>
 </body>
