--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 <body>
     <!-- navbar section -->
     <div class="header">
-        <div class="navbar__content">
+        <div class="navbar__content wrapper">
             <div class="navbar__left">
                 <img src="assets/logo.svg" alt="">
+            </div>
+            <div class="navbar__left--mob">
+                <img src="assets/logo-1.svg" alt="">
             </div>
             <div class="navbar__center">
                 <ul>
@@ -41,7 +44,7 @@
 
     <!-- search section -->
 
-    <div class="search__section">
+    <div class="search__section wrapper">
         <div class="search__head">
             <h1>Where to?</h1>
         </div>
@@ -66,8 +69,8 @@
     </div>
 
     <!-- banner section -->
-
-    <div class="banner__section">
+<div class="wrapper">
+    <div class="banner__section ">
         <div class="banner__content">
             <h1>Build a trip in minutes</h1>
             <p>Get a personalised itinerary just for you, guided by traveller tips and reviews.</p>
@@ -79,11 +82,16 @@
         <div class="banner__image">
             <img src="assets/b1.png" alt="">
         </div>
+        <div class="banner__mob">
+            <img src="assets/b2.png" alt="">
+        </div>
     </div>
+</div>
+    
 
 
     <!-- ad section -->
-    <div class="ad__section">
+    <div class="ad__section wrapper">
         <div class="ad__items">
             <div class="img--1">
                 <div class="ad__images">
@@ -106,7 +114,7 @@
 
     <!--trip carousel section-->
 
-    <div class="carousel__section">
+    <div class="carousel__section wrapper">
         <div class="carousel__title">
             <p>Take a trip to a traveller fave</p>
             <span>The best tours, activities and tickets</span>
@@ -144,7 +152,7 @@
     </div>
 
     <!-- experiense section -->
-    <div class="carousel__section">
+    <div class="carousel__section wrapper">
         <div class="carousel__title">
             <p>Top experiences on Tripadvisor</p>
             <span>The best tours, activities and tickets</span>
@@ -237,7 +245,7 @@
 
     <!--trip carousel section-->
 
-    <div class="carousel__section mt-50">
+    <div class="carousel__section mt-50 wrapper">
         <div class="carousel__title">
             <p>TVibrant Asian cities</p>
             <span>From rich cultural history to psychedelic streets
@@ -277,34 +285,130 @@
     </div>
 
     <!-- video section -->
-    <div class="video__section">
+    <div class="video__section wrapper">
         <div class="video">
-            <iframe autoplay width="100%" height="315" src="https://www.youtube.com/embed/rcS1AsvZino?si=ZL69zicDym2TFbdr" title="YouTube video player" frameborder="0" allow=" autoplay; muted;  picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe autoplay width="100%" height="315"
+                src="https://www.youtube.com/embed/rcS1AsvZino?si=ZL69zicDym2TFbdr" title="YouTube video player"
+                frameborder="0" allow=" autoplay; muted;  picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </div>
 
     <div class="footer">
-        <div class="footer__content">
-            <div class="footer__item">
-                <p>About Tripadvisor</p>
-                <ul>
-                    <li>About Us
-                       </li>
-                    <li> Press
-                       </li>
-                    <li> Resources and Policies
-                       </li>
-                    <li> Careers
-                      </li>
-                    <li>  Trust & Safety
-                       </li>
-                       <li> Contact us</li>
-                </ul>
+        <div class="footer__part wrapper">
+            <div class="footer__content ">
+                <div class="footer__item">
+                    <p><i class="fa-solid fa-plus"></i>About Tripadvisor </p>
+                    <ul>
+                        <li>About Us
+                        </li>
+                        <li> Press
+                        </li>
+                        <li> Resources and Policies
+                        </li>
+                        <li> Careers
+                        </li>
+                        <li> Trust & Safety
+                        </li>
+                        <li> Contact us</li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <p> <i class="fa-solid fa-plus"></i>Explore
+
+                    </p>
+                    <ul>
+                        <li> Write a review
+
+                        </li>
+                        <li> Add a Place
+                        </li>
+                        <li>
+                            Join
+
+                        </li>
+                        <li>Travellers' Choice
+
+                        </li>
+                        <li> GreenLeaders
+
+                        </li>
+                        <li> Help Centre
+
+                        </li>
+                        <li> Travel Articles</li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <p> <i class="fa-solid fa-plus"></i>Do Business With Us
+
+
+                    </p>
+                    <ul>
+                        <li> Owners & DMO/CVB
+
+
+                        </li>
+                        <li> Business Advantage
+                        </li>
+                        <li>
+                            Sponsored Placements
+
+
+                        </li>
+                        <li> Access our Content API
+
+
+                        </li>
+
+                    </ul>
+                    <p><i class="fa-solid fa-plus"></i>Get The App
+                    </p>
+                    <ul>
+                        <li><i class="fa-brands fa-apple"></i> iPhone App
+                        </li>
+                        <li><i class="fa-brands fa-android"></i>Android App</li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <p><i class="fa-solid fa-plus"></i>Tripadvisor Sites
+                    </p>
+                    <ul>
+                        <li> Book tours and attraction tickets on Viator</li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer__item"></div>
-            <div class="footer__item"></div>
-            <div class="footer__item"></div>
+
+            <div class="footer__content--two">
+                <div class="f__item--1">
+                    <img src="assets/logo-1.svg" alt="">
+                    <div class="f__para">
+                        <p>© 2024 Tripadvisor LLC All rights reserved.</p>
+                        <ul>
+                            <li>Terms of Use
+                            </li>
+                            <li> Privacy and Cookies Statement
+
+                            </li>
+                            <li> Cookie consent
+                            </li>
+                            <li>
+                                How the site works
+                            </li>
+                            <li>Contact us</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="f__item--2">
+                    <ul>
+                        <li><i class="fa-brands fa-facebook"></i></li>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-instagram"></i></li>
+                        <li><i class="fa-brands fa-youtube"></i></li>
+                    </ul>
+                </div>
+            </div>
         </div>
+
     </div>
 </body>
 
