search bar responsive check

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </div>
 
     <!-- search section -->
-
-    <div class="search__section wrapper">
+<div class="wrapper">
+    <div class="search__section">
         <div class="search__head">
             <h1>Where to?</h1>
         </div>
@@ -68,6 +68,8 @@
         </div>
 
     </div>
+</div>
+
 
     <!-- banner section -->
 <div class="wrapper">
